--- a/スクレイピング/Untitled.ipynb
+++ b/スクレイピング/Untitled.ipynb
@@ -2,91 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7fba1fa5-0133-4f61-b6d0-9f595d9a0ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def yahoo_news_ranking():\n",
-    "    url = 'https://news.yahoo.co.jp'\n",
-    "    r = requests.get(url)\n",
-    "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
-    "    elements = soup.select('.sc-dvXYtj.iduHXF')\n",
-    "    elements = elements[:5]\n",
-    "    \n",
-    "    news_urls = []\n",
-    "    for element in elements:\n",
-    "        link = element.a['href']\n",
-    "        news_urls.append(link)\n",
-    "    \n",
-    "    return news_urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "2ec30d20-8b03-4882-b4cc-9405eb84ff20",
+   "execution_count": 1,
+   "id": "76c3b6e4-fd67-46f8-862c-cb6b1ec83fa7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "def sankei_news_text(url):\n",
+    "    r = requests.get(url)\n",
+    "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
+    "    elements = soup.select('.article-text')\n",
+    "\n",
+    "    time.sleep(0.2)\n",
+    "\n",
+    "    text = ''\n",
+    "    for element in elements:\n",
+    "        text += element.text\n",
+    "    \n",
+    "    text = text.replace('\\u3000', '')\n",
+    "    text = text.replace('\\n', '')\n",
+    "\n",
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "39717e9b-f8fe-4f74-98b8-f1140d678548",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = yahoo_news_ranking()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f80521ec-3e18-41f3-8772-e0925ee554bd",
+   "execution_count": 2,
+   "id": "1cfee989-9ec6-418e-9c5d-3c3700a4913f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://news.yahoo.co.jp/articles/2b8d882563b53dc19c863184f79c00ebdf684d74',\n",
-       " 'https://news.yahoo.co.jp/articles/fd1301eb425940114172959550b3c7ae9be52c03',\n",
-       " 'https://news.yahoo.co.jp/articles/6af5eb9f1340d40b0b4aee733d141ce12478ce7a',\n",
-       " 'https://news.yahoo.co.jp/articles/3460da9ae3fa903dd06583911329451c13c20663',\n",
-       " 'https://news.yahoo.co.jp/articles/0d9664c60cc58545662e595d0139b55f4fe6864f']"
+       "'高市早苗経済安全保障担当相は６日、自身を中心とする自民党内の勉強会「『日本のチカラ』研究会」の第２回会合を国会内で開き、政府の対外情報収集体制の強化が必要だとの認識を示した。出席者の一人は「次期党総裁選の高市氏の公約になるだろう」と話した。出席者によると、この日は有識者から政府の対外情報収集体制に関する講演を聞いた。省庁間の摩擦や主導権争いといった課題が挙げられ、高市氏は内閣が強い覚悟で体制整備をすべきだとの考えを示した。勉強会の関係者によると、会員は６日時点で４７人になったが、この日の出席者は初回より３人少ない１０人にとどまった。岸田文雄内閣の支持率が下落する中、出席者からは「派閥の締め付けがある」との声も漏れた。会合後には東京都内で懇親会が行われた。参加議員は「高市派の旗揚げだ。タイミングもいい」と述べ、総裁選に向けた地盤固めの好機とみる。岸田首相は党内主要派閥の支持を受け、その派閥はパーティー券問題で揺らいでいるだけに、女性で無派閥の高市氏は「起死回生のカードになる」（中堅議員）との計算も働いている。次回勉強会は来年１月下旬に開催する。次回の参加人数に注目が集まる。（長橋和之）'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "sankei_news_text('https://www.sankei.com/article/20231206-SZQ3BHVZ6BPBVC5AMOQHNEYDDM/')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c63dafc-a271-482c-a602-6e69a070bc26",
+   "id": "999a2936-6e37-4187-97ef-7150c60a04c0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "url = 'https://news.yahoo.co.jp/ranking/access/news'\n",
-    "r = requests.get(url)\n",
-    "soup = BeautifulSoup(r.text, \"html.parser\")\n",
-    "elements = soup.select('.sc-dvXYtj.iduHXF')\n",
-    "elements = elements[:5]\n",
-    "\n",
-    "news_urls = []\n",
-    "for element in elements:\n",
-    "    link = element.a['href']\n",
-    "    news_urls.append(link)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
