--- a/スクレイピング/summary/Untitled2-Copy1.ipynb
+++ b/スクレイピング/summary/Untitled2-Copy1.ipynb
@@ -2,31 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "id": "96ede5a3-585b-4e75-9bf1-42ab330b648e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "550\n",
-      "エラー: Request Entity Too Large\n",
-      "---------------------------------------------------------\n",
-      "エラー: Request Entity Too Large\n",
-      "---------------------------------------------------------\n",
-      "エラー: Request Entity Too Large\n",
-      "---------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "def text_summary(sentence, errormessage, num):\n",
+    "def text_summary(sentence, errormessage):\n",
     "    # 抽出文章数は入力文章数の2分の1\n",
     "    count = sentence.count('。')\n",
-    "    count = round(count / num)\n",
+    "    count = round(count / 2)\n",
     "    if count < 1:\n",
     "        count = 1\n",
     "\n",
@@ -64,73 +50,80 @@
     "\n",
     "    return res\n",
     "\n",
-    "# テスト\n",
-    "errormessage = ['']\n",
-    "\n",
-    "print(len(sentence))\n",
-    "for i in range(2, 5):\n",
-    "    result = text_summary(sentence, errormessage, i)\n",
-    "    if result:\n",
-    "        print(len(result))\n",
-    "        print(\"要約結果:\", result)\n",
-    "    else:\n",
-    "        print(\"エラー:\", errormessage[0])\n",
-    "    print('---------------------------------------------------------')\n"
+    "summary_sentence = ''\n",
+    "for i, sentence in enumerate(split_sentence):\n",
+    "    sentence = sentence.replace(' ', '')\n",
+    "    result = text_summary(sentence, errormessage)\n",
+    "    try:\n",
+    "        summary_sentence += result\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0ab6dcab-7b0c-4f82-aa69-ec744a0f422f",
+   "execution_count": 53,
+   "id": "ceb388c9-adef-4926-86b1-e2dfc16e0995",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1229"
+       "'労働基準法41条において、事業の種類にかかわらず、監督もしくは管理の地位にある者または機密の事務を取り扱う者（＝「管理監督者」という）については労働時間、休憩及び休日に関する規定は適用しないと定められています。これにより、管理監督者に対しては残業という概念が適用されないため、残業代の支払いは不要とされています。イメージされる「管理職」と労働基準法上の「管理監督者」には大きな違いがあります。管理職であれば必ず管理監督者に該当するわけではなく、労働実態を見て「職務内容」「責任と権限」「勤務態様」「待遇」によって判断されます。のであること（時を選ばず経営上の判断や対応が要請されること）（4）賃金等について、その地位にふさわしい待遇がなされていること管理職の肩書ではあるものの、実際の働き方や待遇を見ると管理監督者とはいえない「名ばかり管理職」に対しては、会社は残業代を支払わなければなりません。例えば「課長」や「マネージャー」などは、肩書や立場的には確かに管理職ではありますが、経営者と一体の立場であったり、経営上の判断を委ねられたりということは、一般的にはまれなケースだと考えられます。'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(articles[0]['text'])"
+    "summary_sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "id": "4c2b7dde-52d0-42a6-9210-51fc87ccf2e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'苦労してせっかく管理職になったのに、昇格したら残業代が払われなくなって結局手取りが減ってしまったという経験がある人もいるのではないでしょうか。管理職になると残業代の支給がなくなる会社は少なくないですが、本来は残業代をもらうべきケースであることは意外と多いものです。 本記事では管理職になると残業代が支払われなくなる理由と、残業代が支払われるべきケースについて解説します。労働基準法41条において、事業の種類にかかわらず、監督もしくは管理の地位にある者または機密の事務を取り扱う者（＝「管理監督者」という）については労働時間、休憩及び休日に関する規定は適用しないと定められています。 これにより、管理監督者に対しては残業という概念が適用されないため、残業代の支払いは不要とされています。ただし、一般的にイメージされる「管理職」と労働基準法上の「管理監督者」には大きな違いがあります。 管理職であれば必ず管理監督者に該当するわけではなく、労働実態を見て「職務内容」「責任と権限」「勤務態様」「待遇」によって判断されます。 残業代の支給が不要な労働基準法上の管理監督者とするためには、以下の4つの要件をすべて満たす必要があります。 （1）労働時間、休憩、休日等に関する、労働基準法上の規制の枠を超えて活動せざるを得ない重要な職務内容であること（経営者と一体の立場であること） （2）労働時間、休憩、休日等に関する、労働基準法上の規制の枠を超えて活動せざるを得ない重要な責任と権限を有していること（経営者から重要な責任と権限を委ねられていること） （3）現実の勤務態様も、労働時間等の規制になじまないようなものであること（時を選ばず経営上の判断や対応が要請されること） （4）賃金等について、その地位にふさわしい待遇がなされていること 管理職の肩書ではあるものの、実際の働き方や待遇を見ると管理監督者とはいえない「名ばかり管理職」に対しては、会社は残業代を支払わなければなりません。 例えば「課長」や「マネージャー」などは、肩書や立場的には確かに管理職ではありますが、経営者と一体の立場であったり、経営上の判断を委ねられたりということは、一般的にはまれなケースだと考えられます。 待遇面からみても、課長やマネージャーは数万円の手当のみというケースが多いのではないでしょうか。'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sentence = articles[0]['text']"
+    "articles[0]['text']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "00770bef-9074-4cdd-93e6-2e4a1babfcd1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#ニュースの本文を区切る\n",
     "def length_decision(sentence):\n",
-    "    if (len(sentence) > 500):\n",
+    "    if (len(sentence) > 350):\n",
     "        split_sentence = []\n",
-    "        count = round(len(sentence) / 500)\n",
+    "        count = round(len(sentence) / 350)\n",
     "        for i in range(count+1):\n",
-    "            start = i * 500\n",
-    "            stop = (i + 1) * 500\n",
+    "            start = i * 350\n",
+    "            stop = (i + 1) * 350\n",
     "            split_sentence.append(sentence[start:stop])\n",
     "    return split_sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "341f11a3-b72e-44ed-997a-6fd5d57e21e4",
    "metadata": {},
    "outputs": [],
@@ -140,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "9da4a361-3e75-4e5b-8ebf-580e028d7a96",
    "metadata": {},
    "outputs": [
@@ -148,14 +141,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "550\n",
-      "年金の平均月額は14万円くらいのはずなのに、実際に受け取ってみたら10万円にも満たなかった、などの状況に直面する場合があります。1ヶ月あたりに受け取れる年金は、一律ではありません。加入していた年金の種類によって異なりますし、そのほかにもどのくらいの収入を得ていたかなどで変わってきます。本記事では、年金の平均額がどのくらいなのか、受け取れる年金額に差がある理由、年金を増やす方法を解説します。1ヶ月あたりに受け取れる年金の平均額は以下のように、公的年金の種類によって異なります。●厚生年金保険（第1号）：14万6000円●国民年金：5万6000円●厚生年金保険（第2～4号）（基礎年金額を含まない）：13万2000円受け取れる年金の種類が厚生年金であれば、平均月額は14万6000円なので「14万円くらい受け取れる」と認識してよいでしょう。しかし、国民年金の平均月額は5万6000円なので、10万円もないというケースは当然ながらありえます。受け取れる年金額に差がある主な理由は、以下のとおりです。●加入する年金の種類●給与額の違い●統計上、男性よりも女性のほうが生涯賃金が少ない理由別に内容を解説します。年金額の少なさについて疑問を持つ人は、ぜひチェックしておきましょう。■加入する年金の種類加入する\n",
+      "350\n",
+      "苦労してせっかく管理職になったのに、昇格したら残業代が払われなくなって結局手取りが減ってしまったという経験がある人もいるのではないでしょうか。管理職になると残業代の支給がなくなる会社は少なくないですが、本来は残業代をもらうべきケースであることは意外と多いものです。 本記事では管理職になると残業代が支払われなくなる理由と、残業代が支払われるべきケースについて解説します。労働基準法41条において、事業の種類にかかわらず、監督もしくは管理の地位にある者または機密の事務を取り扱う者（＝「管理監督者」という）については労働時間、休憩及び休日に関する規定は適用しないと定められています。 これにより、管理監督者に対しては残業という概念が適用されないため、残業代の支払いは不要とされています。ただし、一般的に\n",
       "--------------------------\n",
-      "550\n",
-      "年金が国民年金か厚生年金かで、将来的に受け取れる年金額が異なります。公的年金制度は2階建て構造になっており、1階部分が老齢基礎年金と呼ばれる国民年金です。国民年金は日本に住む満20歳から60歳までのすべての人に加入義務があります。さらに2階部分の厚生年金は、会社員や公務員などが加入する年金で、国民年金に上乗せした金額を受け取れる仕組みです。従って、国民年金にしか加入していない自営業者、フリーランスと比較すると、厚生年金の被保険者だった人のほうが将来的に受け取れる年金額は多くなります。■給与額の違い国民年金保険料は一律であるのに対し、厚生年金は給与額によって変わります。給料を多くもらっている人のほうがおさめる保険料も高くなり、将来的な年金受け取り額のアップにつながる仕組みです。厚生年金は、適用事業所で常時雇用されている70歳未満の人は必ず加入しなければなりません。就業規則や労働契約などに定められた従業員の1週間の所定労働時間、1月の所定労働日数の4分の3以上ある従業員が対象で、現在のところ、臨時で雇用される人や季節的業務に雇用される人は含まれません。■男性よりも女性のほうが生涯賃金が少ない納付する保険料や年金受給額に男女差はないものの、男性と比べて女性のほうが生涯賃金は少ない傾向です。\n",
+      "350\n",
+      "イメージされる「管理職」と労働基準法上の「管理監督者」には大きな違いがあります。 管理職であれば必ず管理監督者に該当するわけではなく、労働実態を見て「職務内容」「責任と権限」「勤務態様」「待遇」によって判断されます。 残業代の支給が不要な労働基準法上の管理監督者とするためには、以下の4つの要件をすべて満たす必要があります。 （1）労働時間、休憩、休日等に関する、労働基準法上の規制の枠を超えて活動せざるを得ない重要な職務内容であること（経営者と一体の立場であること） （2）労働時間、休憩、休日等に関する、労働基準法上の規制の枠を超えて活動せざるを得ない重要な責任と権限を有していること（経営者から重要な責任と権限を委ねられていること） （3）現実の勤務態様も、労働時間等の規制になじまないようなも\n",
       "--------------------------\n",
-      "129\n",
-      "結婚や出産・育児などでやむなく退職をしたり、パート勤務に切り替える必要があったなどの事情がある場合も少なくありません。配偶者の扶養に入る、結婚や出産前と比べて給料額が低くなってしまったなどの点から、受け取れる年金額が少なくなるというケースは発生するでしょう。\n",
+      "283\n",
+      "のであること（時を選ばず経営上の判断や対応が要請されること） （4）賃金等について、その地位にふさわしい待遇がなされていること 管理職の肩書ではあるものの、実際の働き方や待遇を見ると管理監督者とはいえない「名ばかり管理職」に対しては、会社は残業代を支払わなければなりません。 例えば「課長」や「マネージャー」などは、肩書や立場的には確かに管理職ではありますが、経営者と一体の立場であったり、経営上の判断を委ねられたりということは、一般的にはまれなケースだと考えられます。 待遇面からみても、課長やマネージャーは数万円の手当のみというケースが多いのではないでしょうか。\n",
+      "--------------------------\n",
+      "0\n",
+      "\n",
       "--------------------------\n"
      ]
     }
@@ -169,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "895de698-6bcd-499b-9fe9-d8e306cd6fe5",
    "metadata": {},
    "outputs": [],
@@ -369,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "aa165d0e-b96b-414f-b26c-11979b3bf75c",
    "metadata": {},
    "outputs": [],
