--- a/スクレイピング/summary/Untitled.ipynb
+++ b/スクレイピング/summary/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "e472adc9-5411-4b10-99f9-5d3293287a11",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "edd6e0d4-c806-4739-9870-e112fdb337ad",
    "metadata": {},
    "outputs": [],
@@ -26,16 +26,17 @@
     "\n",
     "#要約する文章\n",
     "sentence = '''\n",
-    "プロスケーターの安藤美姫さんがInstagramを更新。現役時代に痛めた右肩を手術したことを報告しました。\n",
-    "手術は無事終了したものの、痛々しい姿に心配の声が集まっています。\n",
-    "ベッドに横たわる姿やレントゲン写真を公開した安藤さん。\n",
-    "安藤さんは自身の現在の状態について、次のように報告しています。\n",
-    "「私事ではございますが、この度、現役の頃に痛めた右肩の状態が思ったよりも悪くなっていたため、手術しました」\n",
-    "「無事に手術を終え退院いたしましたので、ご報告させていただきます」\n",
-    "安藤さんは現役時代、演技中に右肩を脱臼した際に、そのまま演技を続行したためケガをしたそうです。\n",
-    "「2006年の全日本選手権ショートプログラムのスピンの最中に右肩を脱臼しました」\n",
-    "「世界選手権の選考会でもあった大事な試合でしたので、そのまま演技を続けた結果『右肩 関節唇損傷』『脱臼』のケガ」\n",
-    "「世界選手権の代表に選ばれたので、手術を断念しました」\n",
+    "　大谷翔平投手がドジャースへ移籍し、投打の大黒柱を失ったエンゼルスでは、主砲マイク・トラウト外野手のトレードの噂が絶えない。昨季、16勝を挙げたブルージェイズのクリス・バシット投手も「10月後半にプレーするようなチームで彼の姿を見なくちゃいけないって思うんだ」と移籍を望んだ。\n",
+    "\n",
+    "【動画】「とってもステキ」大谷翔平と並んでも変わらぬ…長身のド軍美人レポーター\n",
+    "\n",
+    "　トラウトは2009年のMLBドラフト1巡目（全体25位）でエンゼルスに入団。2011年に19歳という若さでメジャーデビューすると、翌2012年に新人王を獲得した。その後も、3度のMVP、9度のシルバースラッガー賞など、チームの顔として活躍してきた。2019年に当時の北米スポーツ史上最高額となる12年総額4億2650万ドル（約618億4000万円）で契約延長。オプトアウト（契約破棄）権は含まれておらず、事実上の生涯契約となった。\n",
+    "\n",
+    "　エンゼルスは2014年にプレーオフに進出して以降、メジャー30球団ワーストタイとなる9年連続でプレーオフ進出を逃している。MLBネットワークの番組司会者だったクリス・ローズ氏のポッドキャスト番組「クリス・ローズ・ローテーション」に出演したバシットは、ローズ氏からの「ショウヘイ・オオタニがもはやエンゼルスにいない今、野球ファンとしてトラウトのトレードを望んでいるのかな？」との質問に「間違いないよ」と賛同した。\n",
+    "\n",
+    "　バシットは、トラウトの地元であるニュージャージー州ミルビルの近郊にあるフィラデルフィアに本拠地を置くフィリーズへの移籍を提案。「彼がフィリーズでプレーするところを見たいね。彼の故郷のようなものだから。ファン目線で言うと、トラウトと（ブライス・）ハーパーが同じチームにいるなんて、ね。（カイル・）シュワーバーや他の選手たちも含め、彼らとは対戦したくないね」と話した。\n",
+    "\n",
+    "　トラウトは近年怪我にも苦しみ、今季は82試合で打率.263、18本塁打、44打点に終わった。しかし、バシットは「僕の意見では、ポジションの面でトラウトは史上5本の指に入る選手」とコメント。「彼だけではなく、球界や全ての人たちは、トラウトがプレーオフで戦う姿を見るに相応しいと思うよ」とエンゼルスからの移籍を願っていた。\n",
     "'''\n",
     "\n",
     "#パラメーターの設定\n",
@@ -53,30 +54,28 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c341ca60-e0c2-4b46-8525-9eb83a494e4b",
+   "id": "f225e136-b396-4f13-b836-f9dd064e61b4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "「私事ではございますが、この度、現役の頃に痛めた右肩の状態が思ったよりも悪くなっていたため、手術しました」\n",
-      "「無事に手術を終え退院いたしましたので、ご報告させていただきます」\n",
-      "安藤さんは現役時代、演技中に右肩を脱臼した際に、そのまま演技を続行したためケガをしたそうです\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'message': 'Request Entity Too Large', 'status': 1413}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#レスポンスから要約されたテキストを取り出す\n",
-    "for summary in values[\"summary\"]:\n",
-    "    print(summary)"
+    "values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "976ea6f9-ba96-492d-aece-a45a9d2c1534",
+   "id": "65f6d275-5f9b-416c-aa54-1f0ffcc0629a",
    "metadata": {},
    "outputs": [],
    "source": []
